--- a/template/public/netlify.toml
+++ b/template/public/netlify.toml
@@ -1,5 +1,11 @@
 [[redirects]]
- from = ""
- to = ""
+ from = "pagina/pagamento"
+ to = "/pages/pagamentos"
+ status = 301
+ force = true
+ 
+ [[redirects]]
+ from = "/pagina/entrega"
+ to = "/pages/entrega"
  status = 301
  force = true
