--- a/content/settings.json
+++ b/content/settings.json
@@ -1,5 +1,5 @@
 {
-  "domain": "belavirtuosa.netlify.app",
+  "domain": "www.belavirtuosa.com.br",
   "currency_symbol": "R$",
   "primary_color": "#333333",
   "theme": {
