--- a/content/settings.json
+++ b/content/settings.json
@@ -6,7 +6,7 @@
     "bootswatch": "_"
   },
   "bg_color": "#f1f1f1",
-  "logo": "/img/uploads/logo.png",
+  "logo": "/img/uploads/logo-bela.webp",
   "name": "Bela Virtuosa Moda Evangélica",
   "short_name": "bela-virtuosa-de-moda-evangelica",
   "lang": "pt_br",
