--- a/content/settings.json
+++ b/content/settings.json
@@ -1,4 +1,5 @@
 {
+  "repository": "ecomplus-stores/bela-virtuosa",
   "domain": "www.belavirtuosa.com.br",
   "currency_symbol": "R$",
   "primary_color": "#333333",
