chore(edit): short name

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,7 +9,7 @@
   "bg_color": "#f1f1f1",
   "logo": "/img/uploads/logo-bela.png",
   "name": "Bela Virtuosa Moda Evangélica",
-  "short_name": "bela-virtuosa-de-moda-evangelica",
+  "short_name": "Bela Virtuosa Moda Evangélica",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "/img/uploads/nova-logo2020.jpg",
